--- a/frontend/page.html
+++ b/frontend/page.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/icons/favicon.ico">
-    <link rel="apple-touch-icon" href="images/icons/favicon.png">
+    <!-- <link rel="shortcut icon" href="images/icons/favicon.ico"> -->
+    <!-- <link rel="apple-touch-icon" href="images/icons/favicon.png"> -->
     <link rel="apple-touch-icon" sizes="72x72" href="images/icons/favicon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/icons/favicon-114x114.png">
     <!--Loading bootstrap css-->
@@ -186,7 +186,7 @@
     <script src="script/jquery.cookie.js"></script>
     <script src="script/icheck.min.js"></script>
     <script src="script/custom.min.js"></script>
-    <script src="script/jquery.news-ticker.js"></script>
+    <!-- <script src="script/jquery.news-ticker.js"></script> -->
     <script src="script/jquery.menu.js"></script>
     <script src="script/pace.min.js"></script>
     <script src="script/holder.js"></script>
@@ -200,18 +200,18 @@
     <script src="script/jquery.flot.stack.js"></script>
     <script src="script/jquery.flot.spline.js"></script>
     <script src="script/zabuto_calendar.min.js"></script>
-    <script src="script/index.js"></script>
+    <!-- <script src="script/index.js"></script> -->
     <!--LOADING SCRIPTS FOR CHARTS-->
-    <script src="script/highcharts.js"></script>
-    <script src="script/data.js"></script>
+    <!-- // <script src="script/highcharts.js"></script> -->
+    <!-- script src="script/data.js"></script>
     <script src="script/drilldown.js"></script>
     <script src="script/exporting.js"></script>
     <script src="script/highcharts-more.js"></script>
     <script src="script/charts-highchart-pie.js"></script>
-    <script src="script/charts-highchart-more.js"></script>
+    <script src="script/charts-highchart-more.js"></script> -->
     <!--CORE JAVASCRIPT-->
     <script src="script/main.js"></script>
-    <script>        (function (i, s, o, g, r, a, m) {
+    <!-- <script>        (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
@@ -224,13 +224,7 @@
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-145464-12', 'auto');
         ga('send', 'pageview');
-
-        $(document).ready(function() {
-            alert("fuck you");
-        });
-
-
-    </script>
+    </script> -->
 
     <script type="text/javascript">
         function showPanel(panelName) {
