--- a/frontend/page.html
+++ b/frontend/page.html
@@ -182,6 +182,7 @@
                                 <th>Date</th>
                                 <th>Important?</th>
                                 <th>Edit</th>
+                                <th>Delete</th>
                             </tr>
                             </thead>
                             <tbody></tbody>
