#10 Extended the challenge to have fields for a start and end date, its status and progress.

--- a/frontend/page.html
+++ b/frontend/page.html
@@ -223,33 +223,24 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class="row">
+                                <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label for="challenge-value-input" class="control-label">
-                                                Value</label>
-                                                <input id="challenge-value-input" type="text" placeholder="" class="form-control">
+                                            <label for="challenge-since-input" class="control-label">
+                                                Start Date</label>
+                                                <input id="challenge-since-input" type="text" placeholder="" class="form-control">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label for="challenge-date-input" class="control-label">
-                                                Date</label>
-                                                <input id="challenge-date-input" type="text" placeholder="" class="form-control">
+                                            <label for="challenge-deadline-input" class="control-label">
+                                                End Date</label>
+                                                <input id="challenge-deadline-input" type="text" placeholder="" class="form-control">
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="form-group">
-                                            <label for="challenge-important-input" class="control-label">
-                                                Important?</label>
-                                                <input id="challenge-important-input" type="checkbox" placeholder="" class="form-control">
-                                        </div>
-                                    </div>
-                                </div> -->
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
@@ -270,6 +261,10 @@
                             <tr>
                                 <th>#</th>
                                 <th>Declaration</th>
+                                <th>Start date</th>
+                                <th>End date</th>
+                                <th>Status</th>
+                                <th>Progress</th>
                             </tr>
                             </thead>
                             <tbody></tbody>
