#12 List users, delete users, dummy button for viewing the profile.

--- a/frontend/page.html
+++ b/frontend/page.html
@@ -290,9 +290,23 @@
                 <!--END TITLE & BREADCRUMB PAGE-->
 
                 <div class="page-content">
-                    <p>Users</p>
+                <div class="panel panel-yellow">
+                    <div class="panel-heading">Users</div>
+                    <div class="panel-body">
+                        <table id="users-table" class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Username</th>
+                                <th>Email</th>
+                            </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
                 </div>
-
+                
+                </div>
                 </div>
                 <!-- END USERS PAGE -->
 
@@ -363,5 +377,6 @@
     <script src="script/finance-analyzer.js"></script>
     <script src="script/transactions.js"></script>
     <script src="script/challenges.js"></script>
+    <script src="script/users.js"></script>
 </body>
 </html>
