#32 Connect Challenge and ChallengeParameter on the front-end.

--- a/finance-analyzer/src/main/webapp/page.html
+++ b/finance-analyzer/src/main/webapp/page.html
@@ -244,6 +244,24 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
+                                            <label for="challenge-value-input" class="control-label">
+                                                Value</label>
+                                                <input id="challenge-value-input" type="text" placeholder="" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label for="challenge-less-than-input" class="control-label">
+                                                Less than?</label>
+                                                <input id="challenge-less-than-input" type="text" placeholder="" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
                                             <button id="challenge-submit" class="btn btn-primary">Add</button>
                                             <span id="challenge-panel-close" style="float: right; cursor: pointer;">Close</span>
                                         </div>
@@ -261,6 +279,8 @@
                             <tr>
                                 <th>#</th>
                                 <th>Declaration</th>
+                                <th>Value</th>
+                                <th>Less than?</th>
                                 <th>Start date</th>
                                 <th>End date</th>
                                 <th>Status</th>
