#34 Implemented stats for absolute income for current month.

--- a/finance-analyzer/src/main/webapp/page.html
+++ b/finance-analyzer/src/main/webapp/page.html
@@ -398,5 +398,6 @@
     <script src="script/transactions.js"></script>
     <script src="script/challenges.js"></script>
     <script src="script/users.js"></script>
+    <script src="script/stats.js"></script>
 </body>
 </html>
