--- a/finance-analyzer/src/main/webapp/page.html
+++ b/finance-analyzer/src/main/webapp/page.html
@@ -142,6 +142,20 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
+                                        <div class="form-group" id="transaction-type-input">
+                                            <label class="control-label">
+                                                Type</label>
+                                                <div>
+                                                    <label></label><input type="radio" name="trans-type" value="gain">Gain
+                                                    <label></label><input type="radio" name="trans-type" value="expense">Expense
+                                                </div>
+                                                <!--<input id="transaction-type-input" type="radio" name="trans-type" class="form-control">
+                                                <input id="transaction-type-input" type="radio" name="trans-type" class="form-control"> -->
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="transaction-date-input" class="control-label">
                                                 Date</label>
