--- a/finance-analyzer/src/main/webapp/page.html
+++ b/finance-analyzer/src/main/webapp/page.html
@@ -97,6 +97,17 @@
 
                 <div class="page-content">
                     <p>Dashboard</p>
+                    <div class="col-lg-6">
+                        <div class="portlet box">
+                            <div class="portlet-header">
+                                <div class="caption">Are you spending on what's important?</div>
+                                <div class="tools"><i class="fa fa-chevron-up"></i><i data-toggle="modal" data-target="#modal-config" class="fa fa-cog"></i><i class="fa fa-refresh"></i><i class="fa fa-times"></i></div>
+                            </div>
+                            <div class="portlet-body">
+                                <div id="pie-chart" style="width: 100%; height:300px"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 </div>
