fix email id in html. Closes #45

--- a/finance-analyzer/src/main/webapp/landing-page/index.html
+++ b/finance-analyzer/src/main/webapp/landing-page/index.html
@@ -373,7 +373,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="form-register-email">Email</label>
-                                    <input type="text" name="form-email" placeholder="Email..." class="form-email form-control" id="form-login-email">
+                                    <input type="text" name="form-email" placeholder="Email..." class="form-email form-control" id="form-register-email">
                                 </div>
                                 <div class="form-group">
                                     <label class="sr-only" for="form-register-password">Password</label>
