Handle wrong credentials on log in. Closes #58

--- a/finance-analyzer/src/main/webapp/landing-page/index.html
+++ b/finance-analyzer/src/main/webapp/landing-page/index.html
@@ -402,7 +402,7 @@
                         </div>
                         
                         <div class="modal-body">
-                            
+                            <p class="wrong-credentials-warning" style='color: #fd625e; font-weight: bold;font-size:16px;'>Incorrect username or password!</p>
                             <form role="form" action="" method="post" class="registration-form">
                                 <div class="form-group">
                                     <label class="sr-only" for="form-login-username">Username</label>
