--- a/finance-analyzer/src/main/webapp/profile.html
+++ b/finance-analyzer/src/main/webapp/profile.html
@@ -41,7 +41,7 @@
                         <ul class="dropdown-menu dropdown-user pull-right">
                             <li><a href="#"><i class="fa fa-user"></i>My Profile</a></li>
                             <li class="divider"></li>
-                            <li><a href="Login.html"><i class="fa fa-key"></i>Log Out</a></li>
+                            <li><a id="logout-button"><i class="fa fa-key"></i>Log Out</a></li>
                         </ul>
                     </li>
                     
